--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
 }
 
 .container {
-    width: 800px;
+    width: 960px;
     margin: auto;
     background-color: #FFF;
 }
@@ -92,37 +92,60 @@ body {
 
 
 .container .hero {
-    height: 250px;
-    background-image: url(https://images.unsplash.com/photo-1589652717521-10c0d092dea9?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    height: 320px;
+    background-image: url(img/pom-laptop-unsplash.jpg);
     background-size: cover;
     background-position:  center;
     border-top: lightseagreen solid;
     border-bottom: salmon solid;
 }
 
-.content {
+.main {
+    width: 600px;
     padding: 20px;
+    box-sizing: border-box;
+    float: left;
 }
 
-.content h2 {
+.main h2 {
     font-size: 20px;
     font-weight: bold;
 }
 
-.content .penulis {
+.main .penulis {
     font-size: 11px;
     margin-top: -5px;
 }
 
-.content .penulis a{
+.main .penulis a{
     color: salmon;
     text-decoration: none;
 }
 
-.content p {
+.main p {
     margin-bottom: 20px;
     font-size: 14px;
+}
 
+.sidebar {
+    width: 300px;
+    float: right;
+    padding: 20px;
+}
+
+.sidebar h3 {
+    font-weight: bold;
+    color: gray;
+}
+
+.sidebar img {
+    width: 75px;
+    float: left;
+    padding-right: 10px;
+}
+
+.sidebar p {
+    font: 12px/18px arial;
 }
 
 .footer {
@@ -134,4 +157,34 @@ body {
     text-align: center;
     color: #EDEDED;
     font-size: 12px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* clearfix */
+.cf:before,
+.cf:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.cf:after {
+    clear: both;
+}
+
+/**
+ * For IE 6/7 only
+ * Include this rule to trigger hasLayout and contain floats.
+ */
+.cf {
+    zoom: 1;
 }
