--- a/style.css
+++ b/style.css
@@ -54,12 +54,28 @@ body {
     font: 16px/28px Arial, sans-serif;
     background-color: #EDEDED;
     color: #333;
+    background: fixed;
+    background-image: url(img/background-unsplash.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+.top-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 40px;
+    background-color: maroon;
+    border-bottom: 3px solid red;
+    z-index: 9999;
 }
 
 .container {
     width: 960px;
-    margin: auto;
+    margin: 80px auto;
     background-color: #FFF;
+    position: relative;
 }
 
 .container .header {
@@ -147,6 +163,19 @@ body {
 .sidebar p {
     font: 12px/18px arial;
 }
+
+.github {
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+    background-image: url(img/ribbon-red-png.png);
+    background-repeat: no-repeat;
+    text-indent: -9999px;
+    position: absolute;
+    top: -18px;
+    right: -5px;
+}
+
 
 .footer {
     padding: 15px;
